# blog-embedding-lua-in-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/call_lua_function/: CMakeLists.txt  call_lua_function.c  script3.lua
examples/call_lua_function_with_argument_return/: CMakeLists.txt  call_lua_function_with_argument_return.c  script4.lua
examples/error_handling/: CMakeLists.txt  error_handling.c
examples/exposing_functions_namespace_lua/: CMakeLists.txt  exposing_functions_namespace_lua.c
examples/exposing_single_function_lua/: CMakeLists.txt  exposing_single_function_lua.c
examples/exposing_variable_to_lua/: CMakeLists.txt  exposing_variable_to_lua.c
examples/get_variable_from_lua/: CMakeLists.txt  get_variable_from_lua.c  script2.lua
examples/running_lua_code_from_file/: CMakeLists.txt  running_lua_code_from_file.c  script.lua
examples/running_lua_code_from_string/: CMakeLists.txt  running_lua_code_from_string.c
examples/starting_lua_vm/: CMakeLists.txt  starting_lua_vm.c
